--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">About me</h1>
-                    <p>I am an enthusiastic third-year B-tech student looking for an opportunity to make use of my
-                        knowledge of data structures and algorithms, competence with cloud computing systems, and
-                        knowledge of web development. Currently, I am learning Data Science. My foundation in
-                        mathematics
+                    <p>I am an enthusiastic fourth-year B-tech student looking for an opportunity to make use of my
+                        knowledge of data structures and algorithms, competence with machine learning, and
+                        knowledge of Back-end development.My foundation in mathematics
                         and analytical thinking has honed my problem-solving abilities, which I believe are crucial in
-                        the
-                        dynamic world of software engineering. </p>
+                        the dynamic world of software engineering. </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -54,14 +52,12 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Programming Languages</span><br>Java , C++ and Python</li>
+                            <li><span>Programming Languages</span><br>Java , C++, Python & SQL</li>
                             <li><span>Front-end Web Development</span><br>HTML , CSS and JavaScript</li>
-                            <li><span>Python and Back-end Development</span><br>Flask & Django</li>
-                            <li><span>DevOps</span><br>Amazon AWS , Google Cloud Platform <br>
+                            <li><span>Python and Back-end Development</span><br>Django</li>
+                            <li><span>DevOps</span><br>Amazon AWS, Docker <br>
                                 Automation, Collaboration, Continuous Integration, Deployment, Monitoring.</li>
-                            <li><span>Machine/Deep learning </span><br>Python , TensorFlow , Keras , Numpy , Pandas <br>
-                                Designing image detection and recognition algorithms</li>
-
+                            <li><span>DataBases</span><br>MySQL, MongoDB & SQLite <br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -71,9 +67,8 @@
                                 Project on Live Mask Detection Web Application using ML<br>
                                 Web app based on HTML, CSS and JavaScript, backend using Flask framework, REST API, ML
                                 model, and Google Cloud Platform<br><br><br></li>
-                            <li><span>Smart India Hackathon</span><br>E-waste Facility Locator Website<br>
-                                Website designed using HTML, CSS, JS, and MERN stack<br>
-                                Backend Deploys ML and </li>
+                            <li><span>DSA</span><br>Solved 300+ DSA Problems on Leetcode and GFG
+                                combined. Ranked in top 27% Worldwide </li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -98,28 +93,28 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Web Design</h2>
-                    <p>"As a Web Designer, I craft seamless digital experiences using the dynamic trio of HTML, CSS, and
-                        JavaScript. With pixel-perfect precision, I bring designs to life, ensuring a visually stunning
-                        and interactive interface that captivates and engages users."</p>
+                    <h2>Back-end Development</h2>
+                    <p>"I specialize in backend development, mainly using Django and Django Rest Framework to build
+                        scalable systems and REST APIs. I have experience with databases like MySQL and SQLite, handling
+                        everything from schema design to optimization. I'm also skilled in deploying applications using
+                        AWS and containerization with Docker. My focus is on building efficient, maintainable backends
+                        that ensure smooth client-server communication.."</p>
                     <a href="http://"></a>
                 </div>
                 <div>
                     <i class="fa-solid fa-cloud"></i>
                     <h2>Cloud Computing</h2>
-                    <p>"I specialize in cloud computing, leveraging skills in AWS, Google Cloud Platform, and virtual
-                        machines. My expertise ensures seamless scalability, robust infrastructure, and efficient
-                        resource management, providing top-notch cloud services for diverse applications and
-                        businesses."</p>
+                    <p>"I have experience in cloud computing, particularly with AWS, where I’ve deployed and scaled
+                        applications using services like EC2 and S3. I’m comfortable managing cloud infrastructure,
+                        setting up servers, and ensuring applications run efficiently in production environments."</p>
                     <a href="http://"></a>
                 </div>
                 <div>
                     <i class="fa-solid fa-gear"></i>
                     <h2>Machine Learning</h2>
-                    <p>"As a machine learning enthusiast, I excel in Python programming and specialize in Convolutional
-                        Neural Networks (CNN) for image recognition. My expertise lies in crafting intelligent solutions
-                        that leverage cutting-edge technology to unlock new possibilities in the world of artificial
-                        intelligence."</p>
+                    <p>"I’ve worked on machine learning projects, including building models for tasks like real-time
+                        mask detection using CNNs. I’m skilled in integrating ML models into applications and deploying
+                        them using Python frameworks, ensuring seamless real-time performance and accuracy."</p>
                     <a href="http://"></a>
                 </div>
 
@@ -154,23 +149,21 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png" alt="">
+                    <img src="images/work-3.jpg" alt="">
                     <div class="layer">
-                        <h3>E-waste Facility Locator Web App</h3>
-                        <p>The proposed website aims to revolutionize e-waste management by providing users with a
-                            comprehensive platform to responsibly dispose of electronic devices. Users can input device
-                            details
-                            or upload images, leveraging AI to fetch product information and highlight harmful and
-                            valuable
-                            components. The system optimizes routes to nearby e-waste facilities using path optimization
-                            algorithms displayed on Google Maps or NavIC. Users can select a facility for self-delivery
-                            or request
-                            a pickup, assigning a facility employee.</p>
-                        <a href="https://sentinals.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i></a>
+                        <h3>AI Dietitian</h3>
+                        <p>This innovative website offers a comprehensive solution for individuals seeking to optimize
+                            their nutrition and wellness. Leveraging cutting-edge AI technology, the platform provides
+                            personalized meal tracking, in-depth packaged food analysis, and customized diet plans
+                            tailored to individual needs.Built with Django, MySQL, Langchain, Google Gemini APIs, and
+                            OllamaEmbeddings, the platform uses RAG to deliver tailored recommendations. Deployed on
+                            AWS, it offers seamless integration and accurate insights to support health goals.</p>
+                        <a href="https://piyush8992.pythonanywhere.com/" target="_blank"><i
+                                class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
             </div>
-            <a href="http://" class="btn">See More</a>
+            <a href="https://github.com/Piyush-Pegasus" class="btn">See More</a>
         </div>
 
     </div>
@@ -183,13 +176,17 @@
                     <p><i class="fa-solid fa-envelope"></i>mesrivastava.piyush@gmail.com</p>
                     <p><i class="fa-solid fa-phone"></i>9598214776</p>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/mesrivastava.piyush/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
-                        <a href="https://twitter.com/PiyushaRockstar" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
-                        <a href="https://www.linkedin.com/in/piyush-srivastava-27b9a8240/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/Piyush-Pegasus" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/mesrivastava.piyush/" target="_blank"><i
+                                class="fa-brands fa-square-instagram"></i></a>
+                        <a href="https://twitter.com/PiyushaRockstar" target="_blank"><i
+                                class="fa-brands fa-square-x-twitter"></i></a>
+                        <a href="http://www.linkedin.com/in/piyush-srivastav-27b9a8240" target="_blank"><i
+                                class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/Piyush-Pegasus" target="_blank"><i
+                                class="fa-brands fa-github"></i></a>
 
                     </div>
-                    <a href="images/CV MAIN.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images\Resume_SE.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form action="">
